src/style/bulma.scss
// Importing Bulma from node_modules
@import "bulma/sass/utilities/_all.sass";
@import "bulma/sass/base/helpers.sass";

@import "bulma/sass/grid/columns.sass";

@import "bulma/sass/components/navbar.sass";
@import "bulma/sass/components/tabs.sass";


@import "bulma/sass/elements/icon.sass";
@import "bulma/sass/elements/title.sass";
@import "bulma/sass/elements/container.sass";
@import "bulma/sass/elements/button.sass";
@import "bulma/sass/elements/tag.sass";
@import "bulma/sass/elements/form.sass";


@import "bulma/sass/layout/hero.sass";
@import "bulma/sass/grid/tiles.sass";


//todo remove a underline


.hero-body{
  padding: 1rem 1.5rem;
}

article {
  min-height: 100vh;
  display: flex;
  flex-direction: column;

}

main{
  flex:1
}

html, body {
  max-width: 100%;
  overflow-x: hidden;
}

.blogtag{
  margin-right: 0.5rem
}

.tabs ul{
  border-bottom-style:none
}

